--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/jest": "^29.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "@types/n3": "^1.10.4",
     "arrayify-stream": "^2.0.1",
     "coveralls": "^3.0.0",
     "eslint": "^7.9.0",
@@ -59,6 +60,7 @@
     "jest-each": "^29.4.1",
     "jest-rdf": "^1.5.0",
     "manual-git-changelog": "^1.0.0",
+    "n3": "^1.16.3",
     "pre-commit": "^1.2.2",
     "ts-jest": "^29.0.0",
     "typescript": "^4.0.2"
