--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "transformIgnorePatterns": [
       "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
     ],
-    "testRegex": "(/test/.*|(\\.|/)(test|spec))\\.ts$",
+    "testRegex": ".*-test\\.ts$",
     "moduleFileExtensions": [
       "ts",
       "js"
