--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rdf-store",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.0",
   "description": "A TypeScript/JavaScript implementation of the RDF/JS store interface with support for quoted triples.",
   "keywords": [
     "rdf",
