--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
   ],
   "devDependencies": {
     "@codspeed/tinybench-plugin": "^3.1.0",
+    "@comunica/utils-bindings-factory": "^4.1.0",
+    "@comunica/utils-jest": "^4.1.0",
     "@rubensworks/eslint-config": "^1.0.0",
     "@types/jest": "^29.0.0",
     "@types/n3": "^1.10.4",
@@ -74,7 +76,7 @@
     "streamify-array": "^1.0.1",
     "tinybench": "^2.8.0",
     "ts-jest": "^29.0.0",
-    "typescript": "^5.0.0",
+    "typescript": "5.5.4",
     "yargs": "^17.7.1"
   },
   "jest": {
