--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "module": "commonjs",
+    "target": "es2021",
     "lib": [
-      "es6"
+      "es2021",
+      "dom"
     ],
-    "target": "es6",
+    "module": "commonjs",
     "noImplicitAny": true,
     "removeComments": false,
     "preserveConstEnums": true,
@@ -13,7 +14,10 @@
     "inlineSources": true,
     "declaration": true,
     "importHelpers": false,
-    "strict": true
+    "strict": true,
+
+
+    "strictPropertyInitialization": false
   },
   "include": [
     "index.ts",
