--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "declaration": true,
     "importHelpers": false,
     "strict": true,
+    "noImplicitOverride": true,
 
 
     "strictPropertyInitialization": false
